--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maida Guzman</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <meta name="description" content="Maida Guzman • Full Stack Web Developer | JS, ReactJS, MySQL | Portfolio">
+    <meta name="robots" content="index, follow">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/img/logo/logo-m.ico">
 </head>
 <body>
     <header>
