--- a/views/index.html
+++ b/views/index.html
@@ -16,33 +16,41 @@
     <link rel="icon" type="image/x-icon" href="/img/logo/logo-m.ico">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <nav class="main-nav">
-            <ul>
-                <a href="#">
-                    <li>Work</li>
-                </a>
-                <a href="#">
-                    <li>About</li>
-                </a>
-                <a href="#">
-                    <li>Contact</li>
-                </a>
+            <div class="logo">Logo</div>
+            <ul class="right-nav">
+                <li><a href="#work">Work</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="hero">
-            <h1>MAIDA GUZMAN</h1>
-            <p>FULL STACK DEVELOPER</p>
+        <section id="main">
+            <div class="main-text">
+                <h1 class="main-title">MAIDA GUZMAN</h1>
+                <h4 class="main-sub">FULL STACK DEVELOPER</h4>
+                <a class="btn-main" href="#work">WORK</a>
+            </div>
         </section>
-        <section id="projects">
+        <section id="main">
+            <div class="main-text">
+                <h1 class="main-title">MAIDA GUZMAN</h1>
+                <h4 class="main-sub">FULL STACK DEVELOPER</h4>
+                <a class="btn-main" href="#work">WORK</a>
+            </div>
+        </section>
+        <section id="work">
 
         </section>
         <section id="about">
 
         </section>
         <section id="skills">
+
+        </section>
+        <section id="contact">
 
         </section>
     </main>
