--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,11 +28,18 @@ body li {
 }
 
 /* HEADER  */
-.main-header {
-  background-color: #1c1d20;
-  position: sticky;
+
+/* .main-header {
+  background-color: transparent;
+  position: fixed;
   top: 0px;
-  z-index: 3;
+} */
+.main-header {
+  background-color: transparent;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  transition: top 1s;
 }
 .main-nav {
   display: flex;
@@ -74,7 +81,7 @@ main {
   width: 100%;
 }
 #main {
-  min-height: 92vh;
+  min-height: 100vh;
   background: linear-gradient(180deg, #1c1d20 0%, rgba(0, 22, 24, 0.84) 100%);
   display: flex;
   flex-direction: column;
