--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="main-header">
         <nav class="main-nav">
-            <div class="logo">Logo</div>
+            <div class="logo"></div>
             <ul class="right-nav">
                 <li><a href="#work">Work</a></li>
                 <li><a href="#about">About</a></li>
@@ -55,5 +55,6 @@
         </section>
     </main>
     <footer></footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
