--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
     <link rel="icon" type="image/x-icon" href="/img/logo/logo-m.ico">
 </head>
 <body>
+    <div class="noise"></div>
     <header class="main-header">
         <nav class="main-nav">
             <div class="logo"></div>
