--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -74,6 +74,30 @@ body li {
 .right-nav li {
   padding-left: 11rem;
 }
+
+/* underline animation */
+
+.underline-animation {
+  position: relative;
+  padding: 0.5rem 0;
+}
+.underline-animation:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #ffffff;
+  transform-origin: bottom right;
+  transition: transform 0.2s ease-out;
+}
+.underline-animation:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+
 /* MAIN */
 main {
   /* position: absolute;
