--- a/views/index.html
+++ b/views/index.html
@@ -21,9 +21,9 @@
         <nav class="main-nav">
             <div class="logo"></div>
             <ul class="right-nav">
-                <li><a href="#work">Work</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li ><a class="underline-animation" href="#work">Work</a></li>
+                <li ><a class="underline-animation" href="#about">About</a></li>
+                <li ><a class="underline-animation" href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
