work section basic layout

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maida Guzman</title>
+    <title>Maida Guzman | Dev</title>
     <meta name="description" content="Maida Guzman • Full Stack Web Developer | JS, ReactJS, MySQL | Portfolio">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="/css/normalize.css">
@@ -35,14 +35,51 @@
                 <a class="btn-main" href="#work">WORK</a>
             </div>
         </section>
-        <section id="main">
-            <div class="main-text">
-                <h1 class="main-title">MAIDA GUZMAN</h1>
-                <h4 class="main-sub">FULL STACK DEVELOPER</h4>
-                <a class="btn-main" href="#work">WORK</a>
-            </div>
-        </section>
         <section id="work">
+            <div class="work-container">
+                <div class="project-container">
+                    <div class="project-text-wrapper">
+                        <div class="project-logo project-numa">
+                            <h3>NUMA</h3>
+                        </div>
+                        <div class="project-main-text">
+                            <h4>E COMMERCE</h4>
+                            <h2>AN E COMMERCE THAT</br>INSPIRES FREEDOM</h2>
+                            <p>Design and web development built to enhance a responsive and</br>user-centered experience</p>
+                        </div>
+                        <a class="btn-project" href="#">VISIT WEBSITE</a>
+                        <a class="btn-project" href="#">GITHUB</a>
+                    </div>
+                </div>
+                <div class="project-container">
+                    <div class="project-text-wrapper">
+                        <div class="project-logo project-gorrafy">
+                            <h3>GORRAFY</h3>
+                        </div>
+                        <div class="project-main-text">
+                            <h4>E COMMERCE</h4>
+                            <h2>WEB DEVELOPMENT</br>FOR GORRAFY</h2>
+                            <p>Digital House bootcamp final project, team development under</br>agile methodologies</p>
+                        </div>
+                        <a class="btn-project" href="#">VIEW DEMO</a>
+                        <a class="btn-project" href="#">GITHUB</a>
+                    </div>
+                </div>
+                <div class="project-container">
+                    <div class="project-text-wrapper">
+                        <div class="project-logo project-quotes">
+                            <h3>QUOTES</h3>
+                        </div>
+                        <div class="project-main-text">
+                            <h4>WEB APP</h4>
+                            <h2>RANDOM QUOTE</br>GENERATOR</h2>
+                            <p>Web App working with an API for fetching hundreds of quotes and</br>integrated with Twitter</p>
+                        </div>
+                        <a class="btn-project" href="#">VISIT WEBSITE</a>
+                        <a class="btn-project" href="#">GITHUB</a>
+                    </div>
+                </div>    
+            </div>
 
         </section>
         <section id="about">
