--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -159,3 +159,58 @@ main {
   pointer-events: none;
   background: url("/img/home/noise.gif");
 }
+
+/* WORK */
+#work {
+  min-height: 100vh;
+  background: #1c1d20;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.work-container {
+  min-height: 100vh;
+  width: 95%;
+  margin: auto;
+  /* margin-top: 10px; */
+}
+.project-container {
+  min-height: 690px;
+  width: 100%;
+  background-color: #395e61;
+  margin: 30px 0 0;
+  padding: 59px 25px;
+  /* display: flex;
+  flex-direction: column; */
+  /* justify-content: center; */
+}
+.project-text-wrapper {
+  min-height: 100%;
+  padding: 45px 70px 50px;
+}
+
+.project-logo {
+  margin-bottom: 142px;
+}
+
+#about {
+  min-height: 100vh;
+  background: #1c1d20;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#skills {
+  min-height: 100vh;
+  background: #1c1d20;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+#contact {
+  min-height: 100vh;
+  background: #1c1d20;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
