--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -189,8 +189,58 @@ main {
   padding: 45px 70px 50px;
 }
 
-.project-logo {
+.project-logo h3 {
   margin-bottom: 142px;
+  font-weight: 500;
+  font-size: 20px;
+}
+.project-numa h3 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  letter-spacing: 4px;
+}
+.project-gorrafy h3 {
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 4px;
+  font-weight: 400;
+}
+
+.project-quotes h3 {
+  font-family: "Nunito", sans-serif;
+  letter-spacing: 6px;
+  font-weight: 600;
+}
+.project-main-text h4 {
+  font-weight: 400;
+  opacity: 0.5;
+}
+
+.project-main-text h2 {
+  margin: 24px 0;
+  font-weight: 400;
+  font-size: 50px;
+}
+
+.project-main-text p {
+  margin-bottom: 74px;
+  font-weight: 400;
+  line-height: 130%;
+}
+.btn-project {
+  padding: 1rem 5.3rem;
+  color: #ffffff;
+  font-size: 1.6rem;
+  letter-spacing: 0.05rem;
+  border: 1px solid #ffffff;
+  background: none;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  margin-right: 1.5rem;
+}
+.btn-project:hover {
+  background: #ffffff;
+  color: rgba(31, 31, 31, 0.95);
 }
 
 #about {
