--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Nunito:wght@600&family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/img/logo/logo-m.ico">
 </head>
 <body>
@@ -48,7 +49,7 @@
                             <p>Design and web development built to enhance a responsive and</br>user-centered experience</p>
                         </div>
                         <a class="btn-project" href="#">VISIT WEBSITE</a>
-                        <a class="btn-project" href="#">GITHUB</a>
+                        <!-- <a class="btn-project" href="#">GITHUB</a> -->
                     </div>
                 </div>
                 <div class="project-container">
@@ -62,7 +63,7 @@
                             <p>Digital House bootcamp final project, team development under</br>agile methodologies</p>
                         </div>
                         <a class="btn-project" href="#">VIEW DEMO</a>
-                        <a class="btn-project" href="#">GITHUB</a>
+                        <!-- <a class="btn-project" href="#">GITHUB</a> -->
                     </div>
                 </div>
                 <div class="project-container">
@@ -76,7 +77,7 @@
                             <p>Web App working with an API for fetching hundreds of quotes and</br>integrated with Twitter</p>
                         </div>
                         <a class="btn-project" href="#">VISIT WEBSITE</a>
-                        <a class="btn-project" href="#">GITHUB</a>
+                        <!-- <a class="btn-project" href="#">GITHUB</a> -->
                     </div>
                 </div>    
             </div>
