technologies stack for each project

--- a/views/index.html
+++ b/views/index.html
@@ -47,6 +47,11 @@
                             <h4>E COMMERCE</h4>
                             <h2>AN E COMMERCE THAT</br>INSPIRES FREEDOM</h2>
                             <p>Design and web development built to enhance a responsive and</br>user-centered experience</p>
+                            <div class="technologies">
+                                <img src="./img/skills/javascript_logo.png" alt="javascript" title="JavaScript">
+                                <img src="./img/skills/html_logo.png" alt="html" title="HTML5">
+                                <img src="./img/skills/css_logo.png" alt="css" title="CSS3">
+                            </div>
                         </div>
                         <a class="btn-project" href="#">VISIT WEBSITE</a>
                         <!-- <a class="btn-project" href="#">GITHUB</a> -->
@@ -61,6 +66,16 @@
                             <h4>E COMMERCE</h4>
                             <h2>WEB DEVELOPMENT</br>FOR GORRAFY</h2>
                             <p>Digital House bootcamp final project, team development under</br>agile methodologies</p>
+                            <div class="technologies">
+                                <img src="./img/skills/javascript_logo.png" alt="javascript" title="JavaScript">
+                                <img src="./img/skills/express_logo.png" alt="express" title="Express">
+                                <img src="./img/skills/html_logo.png" alt="html" title="HTML5">
+                                <img src="./img/skills/mysql_logo.png" alt="mysql" title="MySQL">
+                                <img src="./img/skills/css_logo.png" alt="css" title="CSS3">
+                                <img src="./img/skills/sequelize_logo.png" alt="sequelize" title="Sequelize">
+                                <img src="./img/skills/nodejs_logo.png" alt="nodejs" title="NodeJS">
+                                <img src="./img/skills/react_logo.png" alt="react" title="ReactJS">
+                            </div>
                         </div>
                         <a class="btn-project" href="#">VIEW DEMO</a>
                         <!-- <a class="btn-project" href="#">GITHUB</a> -->
@@ -75,6 +90,11 @@
                             <h4>WEB APP</h4>
                             <h2>RANDOM QUOTE</br>GENERATOR</h2>
                             <p>Web App working with an API for fetching hundreds of quotes and</br>integrated with Twitter</p>
+                            <div class="technologies">
+                                <img src="./img/skills/javascript_logo.png" alt="javascript" title="JavaScript">
+                                <img src="./img/skills/html_logo.png" alt="html" title="HTML5">
+                                <img src="./img/skills/css_logo.png" alt="css" title="CSS3">
+                            </div>
                         </div>
                         <a class="btn-project" href="#">VISIT WEBSITE</a>
                         <!-- <a class="btn-project" href="#">GITHUB</a> -->
