--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -190,7 +190,7 @@ main {
 }
 
 .project-logo h3 {
-  margin-bottom: 142px;
+  margin-bottom: 118px;
   font-weight: 500;
   font-size: 20px;
 }
@@ -204,7 +204,6 @@ main {
   letter-spacing: 4px;
   font-weight: 400;
 }
-
 .project-quotes h3 {
   font-family: "Nunito", sans-serif;
   letter-spacing: 6px;
@@ -216,15 +215,16 @@ main {
 }
 
 .project-main-text h2 {
-  margin: 24px 0;
+  margin: 24px 0 18px 0;
   font-weight: 400;
   font-size: 50px;
 }
 
 .project-main-text p {
-  margin-bottom: 74px;
+  margin-bottom: 40px;
   font-weight: 400;
   line-height: 130%;
+  opacity: 0.6;
 }
 .btn-project {
   padding: 1rem 5.3rem;
@@ -237,10 +237,22 @@ main {
   cursor: pointer;
   transition: all 0.5s ease-in-out;
   margin-right: 1.5rem;
+  margin-top: 1rem;
 }
 .btn-project:hover {
   background: #ffffff;
   color: rgba(31, 31, 31, 0.95);
+}
+.technologies {
+  display: flex;
+  width: 100%;
+  margin-bottom: 5rem;
+  opacity: 0.8;
+}
+.technologies img {
+  width: 22px;
+  margin-right: 1.7rem;
+  object-fit: contain;
 }
 
 #about {
