--- a/views/index.html
+++ b/views/index.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="project-main-text">
                             <h4>E COMMERCE</h4>
-                            <h2>AN E COMMERCE THAT</br>INSPIRES FREEDOM</h2>
+                            <h2>AN E COMMERCE WITH</br>SUMMER VIBES</h2>
                             <p>Design and web development built to enhance a responsive and</br>user-centered experience</p>
                             <div class="technologies">
                                 <img src="./img/skills/javascript_logo.png" alt="javascript" title="JavaScript">
@@ -53,7 +53,7 @@
                                 <img src="./img/skills/css_logo.png" alt="css" title="CSS3">
                             </div>
                         </div>
-                        <a class="btn-project" href="#">VISIT WEBSITE</a>
+                        <a class="btn-project" href="https://numa-shop.herokuapp.com/" target="_blank">VISIT WEBSITE</a>
                         <!-- <a class="btn-project" href="#">GITHUB</a> -->
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                         <div class="project-main-text">
                             <h4>E COMMERCE</h4>
                             <h2>WEB DEVELOPMENT</br>FOR GORRAFY</h2>
-                            <p>Digital House bootcamp final project, team development under</br>agile methodologies</p>
+                            <p>Digital House bootcamp final project with team development under</br>Agile Methodologies</p>
                             <div class="technologies">
                                 <img src="./img/skills/javascript_logo.png" alt="javascript" title="JavaScript">
                                 <img src="./img/skills/express_logo.png" alt="express" title="Express">
@@ -77,12 +77,12 @@
                                 <img src="./img/skills/react_logo.png" alt="react" title="ReactJS">
                             </div>
                         </div>
-                        <a class="btn-project" href="#">VIEW DEMO</a>
-                        <!-- <a class="btn-project" href="#">GITHUB</a> -->
+                        <a class="btn-project" href="#" target="_blank">VIEW DEMO</a>
+                        <a class="btn-project" href="https://github.com/maida-fl/gorrafy" target="_blank">GITHUB</a>
                     </div>
                 </div>
                 <div class="project-container">
-                    <div class="project-text-wrapper">
+                    <div class="project-text-wrapper project-text-wrapper-quotes">
                         <div class="project-logo project-quotes">
                             <h3>QUOTES</h3>
                         </div>
@@ -96,8 +96,11 @@
                                 <img src="./img/skills/css_logo.png" alt="css" title="CSS3">
                             </div>
                         </div>
-                        <a class="btn-project" href="#">VISIT WEBSITE</a>
-                        <!-- <a class="btn-project" href="#">GITHUB</a> -->
+                        <a class="btn-project" href="https://my-random-quote-generator.herokuapp.com/" target="_blank">VISIT WEBSITE</a>
+                        <a class="btn-project" href="https://github.com/maida-fl/quote-generator" target="_blank">GITHUB</a>
+                    </div>
+                    <div class="project-image-quotes">
+                        <img src="./img/projects/quotes-ipad-mockup.png" alt="quotes-ipad">
                     </div>
                 </div>    
             </div>
@@ -113,7 +116,11 @@
 
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="copyright">
+            <p>Design and code made with</p><img src="./img/home/heart-icon.png" width="25px"><p>by Maida Guzman</p>
+        </div>
+    </footer>
     <script src="./js/main.js"></script>
 </body>
 </html>
