main title update

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maida Guzman | Dev</title>
+    <title>Maida Guzman | Full Stack Developer</title>
     <meta name="description" content="Maida Guzman • Full Stack Web Developer | JS, ReactJS, MySQL | Portfolio">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="/css/normalize.css">
@@ -31,7 +31,8 @@
     <main>
         <section id="main">
             <div class="main-text">
-                <h1 class="main-title">MAIDA GUZMAN</h1>
+                <h1 class="main-title">Maida <span style="color:#aaeedb">Guzman</span></h1>
+
                 <h4 class="main-sub">FULL STACK DEVELOPER</h4>
                 <a class="btn-main" href="#work">WORK</a>
             </div>
