added new projects

--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
             <div class="main-text">
                 <h1 class="main-title">Maida <span style="color:#aaeedb">Guzman</span></h1>
 
-                <h4 class="main-sub">FULL STACK DEVELOPER</h4>
+                <h4 class="main-sub">FULL STACK WEB DEVELOPER</h4>
                 <a class="btn-main" href="#work">WORK</a>
             </div>
         </section>
@@ -97,13 +97,54 @@
                                 <img src="./img/skills/css_logo.png" alt="css" title="CSS3">
                             </div>
                         </div>
-                        <a class="btn-project" href="https://my-random-quote-generator.herokuapp.com/" target="_blank">VISIT WEBSITE</a>
+                        <a class="btn-project" href="https://mood-music-app.onrender.com/" target="_blank">VISIT WEBSITE</a>
                         <a class="btn-project" href="https://github.com/maida-fl/quote-generator" target="_blank">GITHUB</a>
                     </div>
                     <div class="project-image-quotes">
                         <img src="./img/projects/quotes-ipad-mockup.png" alt="quotes-ipad">
                     </div>
-                </div>    
+                </div>
+                <div class="project-container">
+                    <div class="project-text-wrapper">
+                        <div class="project-logo project-quotes">
+                            <h3>mood.</h3>
+                        </div>
+                        <div class="project-main-text">
+                            <h4>WEB APP</h4>
+                            <h2>MUSIC APP</h2>
+                            <p>Design and web development built to enhance a responsive and</br>user-centered experience</p>
+                            <div class="technologies">
+                                <img src="./img/skills/javascript_logo.png" alt="javascript" title="JavaScript">
+                                <img src="./img/skills/html_logo.png" alt="html" title="HTML5">
+                                <img src="./img/skills/css_logo.png" alt="css" title="CSS3">
+                                <img src="./img/skills/react_logo.png" alt="react" title="ReactJS">
+                            </div>
+                        </div>
+                        <a class="btn-project" href="https://mood-music-app.onrender.com" target="_blank">VISIT WEBSITE</a>
+                        <a class="btn-project" href="" target="_blank">GITHUB</a>
+                    </div>
+                </div> 
+                <div class="project-container">
+                    <div class="project-text-wrapper">
+                        <div class="project-logo project-numa">
+                            <h3>Capture</h3>
+                        </div>
+                        <div class="project-main-text">
+                            <h4>WEB APP</h4>
+                            <h2>PORTFOLIO FOR PHOTOGRAPHERS</br> AND VIDEOGRAPHERS</h2>
+                            <p>Design and web development built to enhance a responsive and</br>user-centered experience</p>
+                            <div class="technologies">
+                                <img src="./img/skills/javascript_logo.png" alt="javascript" title="JavaScript">
+                                <img src="./img/skills/html_logo.png" alt="html" title="HTML5">
+                                <img src="./img/skills/css_logo.png" alt="css" title="CSS3">
+                                <img src="./img/skills/react_logo.png" alt="react" title="ReactJS">
+                                <img src="./img/skills/react_logo.png" alt="styled components" title="Styled Components">                              
+                            </div>
+                        </div>
+                        <a class="btn-project" href="" target="_blank">VISIT WEBSITE</a>
+                        <!-- <a class="btn-project" href="#">GITHUB</a> -->
+                    </div>
+                </div>      
             </div>
 
         </section>
